--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  background-image: url('b2.jpg');  /* Replace with your image URL */
+  background-image: url('images/b2.jpg');  /* Replace with your image URL */
   background-size: cover;  /* Cover the entire screen */
   background-position: center center;  /* Center the image */
   background-attachment: fixed;  /* Make the background fixed when scrolling */
